--- a/views/register.ejs
+++ b/views/register.ejs
@@ -51,6 +51,11 @@
         </form>
 
         <p class="mt-4 text-center form-text-link">Já tem uma conta? <a href="/login" class="text-warning fw-bold">Faça Login</a></p>
+        <div class="text-center mt-3">
+            <a href="/" class="text-white-50 text-decoration-none" style="font-size: 0.9em;">
+                <i class="fas fa-arrow-left me-1"></i> Voltar ao início
+            </a>
+        </div>
     </div>
 
 </body>
