--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -42,6 +42,11 @@
                     <textarea class="form-control" id="mensagem" name="mensagem" rows="5" placeholder="Digite sua mensagem aqui..." required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Enviar Mensagem</button>
+                <div class="text-center mt-3">
+                    <a href="/" class="text-white-50 text-decoration-none" style="font-size: 0.9em;">
+                        <i class="fas fa-arrow-left me-1"></i> Voltar ao início
+                    </a>
+                </div>
             </form>
         </div>
     </div>
