--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 </main> <!-- Fecha a tag <main> aberta no header -->
 
-<footer class="footer">
+<footer class="footer" id="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
