refactor: update docker-compose and server configuration to use environment variables for ports; add compression middleware

--- a/views/partials/_cardCarro.ejs
+++ b/views/partials/_cardCarro.ejs
@@ -1,6 +1,6 @@
 <div class="col-md-4 col-sm-6 mb-3">
     <div class="card" data-bs-toggle="modal" data-bs-target="#<%= carro.id %>" style="cursor: pointer;">
-        <img src="<%= carro.imagem %>" class="card-img-top" alt="<%= carro.alt %>">
+        <img src="<%= carro.imagem %>" class="card-img-top" alt="<%= carro.alt %>" loading="lazy">
         <div class="card-body">
             <p class="card-text"><%= carro.nome %></p>
             <p><%= carro.info %></p>
